--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,34 +7,46 @@ WORKDIR /app
 # Copy package files first for better caching
 COPY package*.json ./
 
-# Install dependencies with verbose logging
-RUN echo "Installing dependencies..." && \
-    npm install --verbose && \
-    echo "Dependencies installed. Verifying vite:" && \
-    npx vite --version
+# Install dependencies
+RUN npm install
 
 # Copy all source files
 COPY . .
 
-# Build the application with verbose logging
-RUN echo "Starting build process..." && \
-    npx vite build && \
-    echo "Build completed. Contents of dist:" && \
-    ls -la dist/
+# Build the application
+RUN npm run build
 
 # Production stage with Nginx
 FROM nginx:alpine
 
+# Install gettext for envsubst command
+RUN apk add --no-cache gettext
+
 # Copy built assets from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Copy custom nginx configuration template
-COPY nginx.conf.template /etc/nginx/conf.d/default.conf.template
+# Create nginx configuration template inline (no external file needed)
+RUN echo 'server {' > /etc/nginx/conf.d/default.conf.template && \
+    echo '    listen $PORT;' >> /etc/nginx/conf.d/default.conf.template && \
+    echo '    server_name localhost;' >> /etc/nginx/conf.d/default.conf.template && \
+    echo '    root /usr/share/nginx/html;' >> /etc/nginx/conf.d/default.conf.template && \
+    echo '    index index.html;' >> /etc/nginx/conf.d/default.conf.template && \
+    echo '    location / {' >> /etc/nginx/conf.d/default.conf.template && \
+    echo '        try_files $uri $uri/ /index.html;' >> /etc/nginx/conf.d/default.conf.template && \
+    echo '    }' >> /etc/nginx/conf.d/default.conf.template && \
+    echo '}' >> /etc/nginx/conf.d/default.conf.template
 
-# Create startup script for Railway
+# Remove default nginx config
+RUN rm -f /etc/nginx/conf.d/default.conf
+
+# Create startup script with better error handling
 RUN echo '#!/bin/sh' > /start.sh && \
-    echo 'PORT=${PORT:-80}' >> /start.sh && \
+    echo 'export PORT=${PORT:-80}' >> /start.sh && \
+    echo 'echo "Starting nginx on port $PORT"' >> /start.sh && \
     echo 'envsubst "\$PORT" < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf' >> /start.sh && \
+    echo 'echo "Generated nginx config:"' >> /start.sh && \
+    echo 'cat /etc/nginx/conf.d/default.conf' >> /start.sh && \
+    echo 'nginx -t' >> /start.sh && \
     echo 'nginx -g "daemon off;"' >> /start.sh && \
     chmod +x /start.sh
 
