--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,39 +19,30 @@ RUN npm run build
 # Production stage with Nginx
 FROM nginx:alpine
 
-# Install gettext for envsubst command
-RUN apk add --no-cache gettext
-
 # Copy built assets from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Create nginx configuration template inline (no external file needed)
-RUN echo 'server {' > /etc/nginx/conf.d/default.conf.template && \
-    echo '    listen $PORT;' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '    server_name localhost;' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '    root /usr/share/nginx/html;' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '    index index.html;' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '    location / {' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '        try_files $uri $uri/ /index.html;' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '    }' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '}' >> /etc/nginx/conf.d/default.conf.template
+# Create a simple nginx config that works with Railway
+RUN echo 'events { worker_connections 1024; }' > /etc/nginx/nginx.conf && \
+    echo 'http {' >> /etc/nginx/nginx.conf && \
+    echo '  include /etc/nginx/mime.types;' >> /etc/nginx/nginx.conf && \
+    echo '  default_type application/octet-stream;' >> /etc/nginx/nginx.conf && \
+    echo '  server {' >> /etc/nginx/nginx.conf && \
+    echo '    listen 80;' >> /etc/nginx/nginx.conf && \
+    echo '    server_name localhost;' >> /etc/nginx/nginx.conf && \
+    echo '    root /usr/share/nginx/html;' >> /etc/nginx/nginx.conf && \
+    echo '    index index.html;' >> /etc/nginx/nginx.conf && \
+    echo '    location / {' >> /etc/nginx/nginx.conf && \
+    echo '      try_files $uri $uri/ /index.html;' >> /etc/nginx/nginx.conf && \
+    echo '    }' >> /etc/nginx/nginx.conf && \
+    echo '  }' >> /etc/nginx/nginx.conf && \
+    echo '}' >> /etc/nginx/nginx.conf
 
-# Remove default nginx config
-RUN rm -f /etc/nginx/conf.d/default.conf
+# Remove default nginx configs to avoid conflicts
+RUN rm -rf /etc/nginx/conf.d/*
 
-# Create startup script with better error handling
-RUN echo '#!/bin/sh' > /start.sh && \
-    echo 'export PORT=${PORT:-80}' >> /start.sh && \
-    echo 'echo "Starting nginx on port $PORT"' >> /start.sh && \
-    echo 'envsubst "\$PORT" < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf' >> /start.sh && \
-    echo 'echo "Generated nginx config:"' >> /start.sh && \
-    echo 'cat /etc/nginx/conf.d/default.conf' >> /start.sh && \
-    echo 'nginx -t' >> /start.sh && \
-    echo 'nginx -g "daemon off;"' >> /start.sh && \
-    chmod +x /start.sh
-
-# Expose port (Railway will override this)
+# Expose port 80 (Railway maps this correctly)
 EXPOSE 80
 
-# Start with dynamic port
-CMD ["/start.sh"]
+# Start nginx directly
+CMD ["nginx", "-g", "daemon off;"]
