--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -19,35 +19,29 @@ RUN npm run build
 # Production stage with Nginx
 FROM nginx:alpine
 
-# Install gettext for envsubst
-RUN apk add --no-cache gettext
-
 # Copy built assets from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Create nginx config template that uses Railway's PORT
-RUN echo 'server {' > /etc/nginx/conf.d/default.conf.template && \
-    echo '    listen $PORT;' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '    server_name localhost;' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '    root /usr/share/nginx/html;' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '    index index.html;' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '    location / {' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '        try_files $uri $uri/ /index.html;' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '    }' >> /etc/nginx/conf.d/default.conf.template && \
-    echo '}' >> /etc/nginx/conf.d/default.conf.template
+# Create nginx config to allow all HTTP methods
+RUN echo 'server {' > /etc/nginx/conf.d/default.conf && \
+    echo '    listen 80;' >> /etc/nginx/conf.d/default.conf && \
+    echo '    server_name localhost;' >> /etc/nginx/conf.d/default.conf && \
+    echo '    root /usr/share/nginx/html;' >> /etc/nginx/conf.d/default.conf && \
+    echo '    index index.html;' >> /etc/nginx/conf.d/default.conf && \
+    echo '    location / {' >> /etc/nginx/conf.d/default.conf && \
+    echo '        try_files $uri $uri/ /index.html;' >> /etc/nginx/conf.d/default.conf && \
+    echo '    }' >> /etc/nginx/conf.d/default.conf && \
+    echo '    location /auth/google/callback {' >> /etc/nginx/conf.d/default.conf && \
+    echo '        proxy_pass http://your-backend-domain.up.railway.app/auth/google/callback;' >> /etc/nginx/conf.d/default.conf && \
+    echo '        proxy_set_header Host $host;' >> /etc/nginx/conf.d/default.conf && \
+    echo '        proxy_set_header X-Real-IP $remote_addr;' >> /etc/nginx/conf.d/default.conf && \
+    echo '        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;' >> /etc/nginx/conf.d/default.conf && \
+    echo '        proxy_set_header X-Forwarded-Proto $scheme;' >> /etc/nginx/conf.d/default.conf && \
+    echo '    }' >> /etc/nginx/conf.d/default.conf && \
+    echo '}' >> /etc/nginx/conf.d/default.conf
 
-# Remove default nginx config
-RUN rm -f /etc/nginx/conf.d/default.conf
-
-# Create startup script that substitutes PORT
-RUN echo '#!/bin/sh' > /docker-entrypoint.sh && \
-    echo 'export PORT=${PORT:-80}' >> /docker-entrypoint.sh && \
-    echo 'envsubst "\$PORT" < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf' >> /docker-entrypoint.sh && \
-    echo 'nginx -g "daemon off;"' >> /docker-entrypoint.sh && \
-    chmod +x /docker-entrypoint.sh
-
-# Expose port (Railway will override this)
+# Expose port 80
 EXPOSE 80
 
-# Use the startup script
-CMD ["/docker-entrypoint.sh"]
+# Start nginx directly
+CMD ["nginx", "-g", "daemon off;"]
