--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,28 +1,15 @@
-# Frontend Dockerfile
 FROM node:18-alpine as build
 
-# Set working directory
 WORKDIR /app
-
-# Copy package files first for better caching
 COPY package*.json ./
-
-# Install dependencies
 RUN npm install
-
-# Copy all source files
 COPY . .
-
-# Build the application
 RUN npm run build
 
-# Production stage with Nginx
 FROM nginx:alpine
-
-# Copy built assets from build stage
 COPY --from=build /app/dist /usr/share/nginx/html
 
-# Create nginx config to allow all HTTP methods
+# Create nginx config to forward API requests
 RUN echo 'server {' > /etc/nginx/conf.d/default.conf && \
     echo '    listen 80;' >> /etc/nginx/conf.d/default.conf && \
     echo '    server_name localhost;' >> /etc/nginx/conf.d/default.conf && \
@@ -31,8 +18,8 @@ RUN echo 'server {' > /etc/nginx/conf.d/default.conf && \
     echo '    location / {' >> /etc/nginx/conf.d/default.conf && \
     echo '        try_files $uri $uri/ /index.html;' >> /etc/nginx/conf.d/default.conf && \
     echo '    }' >> /etc/nginx/conf.d/default.conf && \
-    echo '    location /auth/google/callback {' >> /etc/nginx/conf.d/default.conf && \
-    echo '        proxy_pass http://your-backend-domain.up.railway.app/auth/google/callback;' >> /etc/nginx/conf.d/default.conf && \
+    echo '    location /api/ {' >> /etc/nginx/conf.d/default.conf && \
+    echo '        proxy_pass https://backend-production-8e98.up.railway.app;' >> /etc/nginx/conf.d/default.conf && \
     echo '        proxy_set_header Host $host;' >> /etc/nginx/conf.d/default.conf && \
     echo '        proxy_set_header X-Real-IP $remote_addr;' >> /etc/nginx/conf.d/default.conf && \
     echo '        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;' >> /etc/nginx/conf.d/default.conf && \
@@ -40,8 +27,5 @@ RUN echo 'server {' > /etc/nginx/conf.d/default.conf && \
     echo '    }' >> /etc/nginx/conf.d/default.conf && \
     echo '}' >> /etc/nginx/conf.d/default.conf
 
-# Expose port 80
 EXPOSE 80
-
-# Start nginx directly
 CMD ["nginx", "-g", "daemon off;"]
