--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ GOOGLE_CLIENT_SECRET=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
 # For development (Docker):
 #GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
 # For production, change to your domain:
-GOOGLE_REDIRECT_URI=https://frontend-production-3bb7.up.railway.app/auth/google/callback
+NetworkError when attempting to fetch resource.GOOGLE_REDIRECT_URI=https://frontend-production-3bb7.up.railway.app/auth/google/callback
 
 # Database path (optional, defaults to wordle_stats.db in container)
 # DATABASE_PATH=/app/data/wordle_stats.db
