--- a/.env
+++ b/.env
@@ -12,9 +12,12 @@ GOOGLE_CLIENT_SECRET=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
 
 # Redirect URI (should match what you set in Google Console)
 # For development (Docker):
-#GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
+GOOGLE_REDIRECT_URI=http://localhost:3000/auth/google/callback
 # For production, change to your domain:
-NetworkError when attempting to fetch resource.GOOGLE_REDIRECT_URI=https://frontend-production-3bb7.up.railway.app/auth/google/callback
+#GOOGLE_REDIRECT_URI=https://frontend-production-3bb7.up.railway.app/auth/google/callback
 
 # Database path (optional, defaults to wordle_stats.db in container)
 # DATABASE_PATH=/app/data/wordle_stats.db
+
+# API URL for the frontend to connect to the backend
+VITE_API_URL=http://localhost:8000
